# trading-bot

./: .env.enc  .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  PROJECT_ROADMAP.md  PROJECT_STATUS.md  pyproject.toml  setup_vscode.sh
.github/workflows/: ci.yml  docker.yml
config/core/: settings.py
scripts/: encrypt_secrets.py  project_status.sh  test_bybit_comprehensive.py  test_bybit_connection.py
src/crypto_trading_bot/core/: config.py
src/crypto_trading_bot/exchanges/: bybit_client.py
