[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["mich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.11.0"
pendulum = "^3.1.0"
redis = "^6.4.0"
psycopg2-binary = "^2.9.10"
ccxt = "^4.5.5"
websockets = "^15.0.1"
backoff = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-mock = "^3.15.1"
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
bandit = "^1.8.6"
isort = "^6.0.1"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_executable = ".venv/bin/python"
mypy_path = "src"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
