[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["mich <mich@mich-desktop>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "*"
pendulum = "*"
redis = "*"
psycopg2-binary = "*"
ccxt = "*"
websockets = "*"
backoff = "*"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
black = "*"
flake8 = "*"
mypy = "*"
bandit = "*"
isort = "*"
pre-commit = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.flake8]
ignore = "E501,W503,E203,C901"
max-line-length = 88
exclude = ".git,__pycache__,.venv,venv,env,build,dist"
per-file-ignores = "__init__.py:F401"
